--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ color: #000000;
     font-size: 30px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 400px) {
     .navBar {
      flex-direction: column;
     
@@ -98,6 +98,10 @@ color: #000000;
     }
     #navName{
         font-size: 20px;
+    }
+    .profilePic{
+        width: 420px;
+        height: auto;
     }
   }
 
@@ -178,7 +182,7 @@ text-align: center;
     border-radius: 5px;
     overflow-y:hidden;
 	margin: 40px;
-	margin-top: 40px;
+	margin-top: 80px;
 
 }
 
