--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ color: #000000;
 
 /**Nav Bar**/
 .navBar{
-    background-color: #ebebea92;
+    background-color: #e4e4e2;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -48,7 +48,7 @@ color: #000000;
 }
 
 .nav-item {
-	color: #7d8badd5;
+	color: #606b85d5;
     font-family: 'Amiri', serif;
 	float: right;
 	display: block;
@@ -172,7 +172,7 @@ font-family: 'Amiri', serif;
 font-weight: 20;
 font-size: 38px;
 line-height: 42px;
-color: #d8d9da;
+color: #606b85d5;
 text-align: center;
 }
 
@@ -406,20 +406,22 @@ ul {
 	border-radius: 4px;
 	margin: 4px;
 	transition: 0.3s;
-    background-color: #4f4d49;
+    background-color: #647070;
     color: rgb(225, 223, 223);
 }
 .btn:hover {
-	background-color: #787776;
+	background-color: #3e4646;
+    color:  rgb(184, 181, 181);
+    border-color: #3e4646;
 }
-.btn.active {
+/* .btn.active {
     border:#9aa1b1 ;
 	color: white;
-}
+} */
 .btn-alert{
     font-family: 'Lato', sans-serif;
-    font-weight: 80;
-    font-size: 13px;
+    font-weight: 20;
+    font-size: 15px;
     text-align: center;
 }
 .proj{
@@ -513,7 +515,7 @@ ul {
     font-weight: 60;
     font-size: 27px;
     line-height: 42px;
-    color: #2a2d34;
+    color: #f5f5f5;
     text-align: center;
     }
 /* Style inputs with type="text", select elements and textareas */
@@ -531,7 +533,7 @@ input[type=text], select, textarea {
   
   /* Style the submit button with a specific background color etc */
   input[type=submit] {
-    background-color: #878582;
+    background-color: #647070;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -541,13 +543,13 @@ input[type=text], select, textarea {
   
   /* When moving the mouse over the submit button, add a darker green color */
   input[type=submit]:hover {
-    background-color: #6b6f6b;
+    background-color: #a0c5c5;
   }
   
   /* Add a background color and some padding around the form */
   .containers {
     border-radius: 5px;
-    background-color: #c9c7c3;
+    background-color: #a2b4b4;
     padding: 120px;
   }
 
